--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -65,3 +65,24 @@
     --ring: 24 5.7% 82.9%;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f17e7e;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f17e7e;
+}
