--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -150,8 +150,8 @@
     transform: scale(1.2, 1);
   }
 }
-body{
-  background-color: #fafafa;
+body {
+  background-color: #f7f7f7;
 }
 
 .adminLoader {
@@ -500,10 +500,24 @@ body{
   }
 }
 .HoverBackgroundSlide {
-  
-  background: rgb(244,244,244);
-  background: -moz-linear-gradient(90deg, rgba(244,244,244,0.4963235294117647) 6%, rgba(255,255,255,0.6195728291316527) 51%, rgba(244,244,244,0.5019257703081232) 90%);
-  background: -webkit-linear-gradient(90deg, rgba(244,244,244,0.4963235294117647) 6%, rgba(255,255,255,0.6195728291316527) 51%, rgba(244,244,244,0.5019257703081232) 90%);
-  background: linear-gradient(90deg, rgba(244,244,244,0.4963235294117647) 6%, rgba(255,255,255,0.6195728291316527) 51%, rgba(244,244,244,0.5019257703081232) 90%);
+  background: rgb(244, 244, 244);
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(244, 244, 244, 0.4963235294117647) 6%,
+    rgba(255, 255, 255, 0.6195728291316527) 51%,
+    rgba(244, 244, 244, 0.5019257703081232) 90%
+  );
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(244, 244, 244, 0.4963235294117647) 6%,
+    rgba(255, 255, 255, 0.6195728291316527) 51%,
+    rgba(244, 244, 244, 0.5019257703081232) 90%
+  );
+  background: linear-gradient(
+    90deg,
+    rgba(244, 244, 244, 0.4963235294117647) 6%,
+    rgba(255, 255, 255, 0.6195728291316527) 51%,
+    rgba(244, 244, 244, 0.5019257703081232) 90%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f4f4f4",endColorstr="#f4f4f4",GradientType=1);
 }
